<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- You might have a <group> element here -->
    <!-- Add or modify items like these: -->

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_menu_camera"
    android:title="@string/menu_chat" />
    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_menu_camera"
    android:title="@string/menu_call" />
    <item
        android:id="@+id/navigation_memories"
        android:icon="@drawable/ic_menu_camera"
    android:title="@string/menu_memories" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_menu_camera"
    android:title="@string/menu_settings" />

    <!-- Keep other existing menu items if needed -->

</menu>